fixed letter spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: 'Questrial', sans-serif;
     background: #fff;
-    color: #333; 
+    color: #333;
     min-width: 320px;
 }
 
@@ -16,16 +16,16 @@ body {
     /* z-index: 10; */
 }
 
-#header-description{
+#header-description {
     text-align: center;
     font-family: 'Raleway', sans-serif;
     font-size: 0.85em;
     color: #ff7043;
-    margin-top: 10px; 
+    margin-top: 10px;
     padding: 0 20px;
 }
 
-#header-separator{
+#header-separator {
     border-bottom: 1px solid #ddd;
     position: sticky;
     top: 36px;
@@ -36,7 +36,7 @@ body {
     background: #fff;
 }
 
-#header #logo{
+#header #logo {
     text-align: center;
 }
 
@@ -46,11 +46,18 @@ body {
     text-transform: uppercase;
     text-decoration: none;
     color: #333;
-    transition: all 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out;
     display: inline-block;
     margin: 0 auto;
     letter-spacing: 1vw;
     white-space: nowrap;
+}
+
+@media all and (-ms-high-contrast: none),
+(-ms-high-contrast: active) {
+    #header #logo a {
+        letter-spacing: 0.2em !important;
+    }
 }
 
 #header #logo a:after {
@@ -81,13 +88,13 @@ h6 {
     font-weight: 600;
 }
 
-.blog-post{
+.blog-post {
     padding: 20px 20px;
     max-width: 800px;
     margin: 0 auto;
 }
 
-.separater{
+.separater {
     width: 100%;
     height: 1px;
     background: #999;
@@ -105,21 +112,20 @@ a:hover {
     text-decoration: none;
 }
 
-.post-title{
-    font-size: 1.2em; 
+.post-title {
+    font-size: 1.2em;
     font-family: 'Raleway', sans-serif;
     margin-bottom: 10px;
 }
 
-
-.post-date, .post-tags{
+.post-date,
+.post-tags {
     font-family: 'Raleway', sans-serif;
     font-size: 0.8em;
     color: #777;
-    
 }
 
-.post-tags a{
+.post-tags a {
     display: inline-block;
     background: #039be5;
     border-radius: 30px;
@@ -129,7 +135,7 @@ a:hover {
     margin-bottom: 5px;
 }
 
-.post-tags a:hover{
+.post-tags a:hover {
     display: inline-block;
     background: #ff7043;
     text-decoration: none;
@@ -143,8 +149,7 @@ a:hover {
     line-height: 1.4em;
 }
 
-
-.tag-title{
+.tag-title {
     padding: 10px 20px;
     border-bottom: 1px solid #eee;
     border-top: 1px solid #ddd;
@@ -153,10 +158,9 @@ a:hover {
     position: sticky;
     background: #fff;
     top: 42px;
-    
 }
 
-.tag-title-container{
+.tag-title-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -165,10 +169,8 @@ a:hover {
     margin: 0 auto;
 }
 
-.tag-title .post-tags a{
+.tag-title .post-tags a {
     background: #ff7043;
 }
 
-.container{
-    
-}
+.container {}
